--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,18 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.animate-fadeOut {
+  animation: fadeOut 4s ease-in-out;
+}
 
 body {
 }
